--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-styled-components": "^1.4.14",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
