--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "axios": "^0.19.2",
+    "styled-icons": "^10.2.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vue-styled-components": "^1.4.14",
